tests/ui/associated-inherent-types/bound_vars_in_args.stderr
error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/bound_vars_in_args.rs:17:1
   |
LL | struct Bar
   | ^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `T`
note: required by a bound in `Foo<T>::IAT`
  --> $DIR/bound_vars_in_args.rs:13:9
   |
LL | impl<T: Sized> Foo<T> {
   |         ^^^^^ required by this bound in `Foo<T>::IAT`
LL |     type IAT = u8;
   |          --- required by a bound in this associated type

error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/bound_vars_in_args.rs:17:1
   |
LL | / struct Bar
LL | |
LL | |
LL | | where
LL | |     for<T> Foo<T>::IAT: Sized;
   | |______________________________^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `T`
note: required by a bound in `Foo<T>::IAT`
  --> $DIR/bound_vars_in_args.rs:13:9
   |
LL | impl<T: Sized> Foo<T> {
   |         ^^^^^ required by this bound in `Foo<T>::IAT`
LL |     type IAT = u8;
   |          --- required by a bound in this associated type

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
